--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<html><head><!-- fragment shader --><script id="fs" type="x-shader/x-fragment">precision mediump float;
+<html>
+
+<head><!-- fragment shader -->
+    <script id="fs" type="x-shader/x-fragment">precision mediump float;
   uniform float time;
   uniform vec2  mouse;
   uniform vec2  resolution;
@@ -41,35 +44,62 @@
     c0*=.5+dot(c0,vec3(1,1,1))/sqrt(3.)*.3;
     c0+=pow(length(sin(c0*3.14*7.))/sqrt(7.)*1.1,25.1)*(.01+.3*c0);
 
-    gl_FragColor=vec4(c0,1.0);
+    gl_FragColor=vec4(c0,0.9);
   }
   </script><!-- /fragment shader -->
-  
-  <!-- vertex shader --><script id="vs" type="x-shader/x-vertex">
+
+    <!-- vertex shader -->
+    <script id="vs" type="x-shader/x-vertex">
   attribute vec3 position;
   
   void main(void){
       gl_Position = vec4(position, 1.0);
   }
   </script><!-- /vertex shader -->
-  
-  <script src="main.js" type="text/javascript"></script>
-  <style type="text/css">
-      * {
-          text-align: center;
-          margin: 10px auto;
-          padding: 0px;
-      }
-      body {
 
-      }
-      canvas {
-          box-shadow: 0px 0px 0px 1px gray;
-          
-      }
-  </style>
-  </head>
-  <body>
-      <canvas id="canvas"></canvas>
-      <p><input type="checkbox" id="check" checked><label for="check"> auto run</label></p>
-  </body></html>
+    <script src="main_1.js" type="text/javascript"></script>
+    <style type="text/css">
+        * {
+            text-align: center;
+            margin: 10px auto;
+            padding: 0px;
+        }
+
+        body {}
+
+        canvas {
+            box-shadow: 0px 0px 0px 1px gray;
+            width: 100%;
+
+
+        }
+
+        div {
+            position: relative;
+            width: 480px;
+        }
+
+        img {
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            opacity: 0.6;
+
+
+        }
+    </style>
+</head>
+
+<body>
+    <div>
+        <canvas id="canvas"></canvas>
+        <img src="/textures/test_bg.png" alt="">
+    </div>
+
+    <p><input type="checkbox" id="check" checked><label for="check"> auto run</label></p>
+</body>
+
+</html>
