--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <style type="text/css">
         * {
             text-align: center;
-            margin: 10px auto;
+            margin: 0;
             padding: 0px;
         }
 
@@ -76,7 +76,8 @@
 
         div {
             position: relative;
-            width: 480px;
+            overflow: hidden;
+
         }
 
         img {
@@ -84,11 +85,20 @@
             top: 0;
             right: 0;
             bottom: 0;
-            left: 0;
-            width: 100%;
-            opacity: 0.6;
+            left: -20%;
+            width: 130%;
+            margin: 0 auto;
+
+            opacity: 0.5;
+            animation: sample 10s alternate infinite;
 
 
+        }
+
+        @keyframes sample {
+            to {
+                transform: skew(-7deg, 0deg);
+            }
         }
     </style>
 </head>
