--- a/index_4.html
+++ b/index_4.html
@@ -1,4 +1,7 @@
-<html><head><!-- fragment shader --><script id="fs" type="x-shader/x-fragment">precision mediump float;
+<html>
+
+<head><!-- fragment shader -->
+  <script id="fs" type="x-shader/x-fragment">precision mediump float;
   uniform float time;
   uniform vec2  mouse;
   uniform vec2  resolution;
@@ -23,32 +26,37 @@
     gl_FragColor=vec4(col, sin(p.x+p.y) + 0.7);
   }
   </script><!-- /fragment shader -->
-  
-  <!-- vertex shader --><script id="vs" type="x-shader/x-vertex">
+
+  <!-- vertex shader -->
+  <script id="vs" type="x-shader/x-vertex">
   attribute vec3 position;
   
   void main(void){
       gl_Position = vec4(position, 1.0);
   }
   </script><!-- /vertex shader -->
-  
-  <script src="main.js" type="text/javascript"></script>
-  <style type="text/css">
-      * {
-          text-align: center;
-          margin: 10px auto;
-          padding: 0px;
-      }
-      body {
 
-      }
-      canvas {
-          box-shadow: 0px 0px 0px 1px gray;
-          
-      }
+  <script src="main_4.js" type="text/javascript"></script>
+  <style type="text/css">
+    * {
+      text-align: center;
+      margin: 0;
+      padding: 0px;
+    }
+
+    body {}
+
+    canvas {
+      box-shadow: 0px 0px 0px 1px gray;
+      width: 100%;
+
+    }
   </style>
-  </head>
-  <body>
-      <canvas id="canvas"></canvas>
-      <p><input type="checkbox" id="check" checked><label for="check"> auto run</label></p>
-  </body></html>
+</head>
+
+<body>
+  <canvas id="canvas"></canvas>
+  <p><input type="checkbox" id="check" checked><label for="check"> auto run</label></p>
+</body>
+
+</html>
