--- a/index_4.html
+++ b/index_4.html
@@ -13,7 +13,7 @@
   }
   
   void main(void){
-    vec2 p=(2.0*gl_FragCoord.xy-resolution.xy)/max(resolution.x,resolution.y);
+    vec2 p=(1.5*gl_FragCoord.xy-resolution.xy)/max(resolution.x,resolution.y);
     for(int i=1;i<10;i++)
     {
       vec2 newp=p;
@@ -21,9 +21,9 @@
       newp.y+=0.6/float(i)*sin(float(i)*p.x+time*0.14+0.3*float(i+10))-1.4;
       p=newp;
     }
-    vec3 col=vec3(sin(p.x+p.y)-0.2,0.5-(sin(p.y)),0.95);
+    vec3 col=vec3(0.1-(sin(p.y)),sin(p.x+p.y)-0.4,1.0);
 
-    gl_FragColor=vec4(col, sin(p.x+p.y) + 0.7);
+    gl_FragColor=vec4(col, 0.6);
   }
   </script><!-- /fragment shader -->
 
@@ -44,11 +44,14 @@
       padding: 0px;
     }
 
-    body {}
+    body {
+      background-color: rgb(229, 239, 249);
+    }
 
     canvas {
       box-shadow: 0px 0px 0px 1px gray;
       width: 100%;
+      opacity: 0.25;
 
     }
   </style>
