--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <body>
     <div>
         <canvas id="canvas"></canvas>
-        <img src="/textures/test_bg.png" alt="">
+        <img src="./textures/test_bg.png" alt="">
     </div>
 
     <p><input type="checkbox" id="check" checked><label for="check"> auto run</label></p>
