--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         canvas {
             box-shadow: 0px 0px 0px 1px gray;
             width: 100%;
-
+            opacity: 0.9;
 
         }
 
