--- a/prism_animated.html
+++ b/prism_animated.html
@@ -6,7 +6,6 @@
       text-align: center;
       margin: 0;
       padding: 0px;
-      background-color: rgb(236, 236, 236);
     }
 
     body {}
@@ -24,14 +23,27 @@
     }
 
     canvas {
-
+      position: fixed;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
       width: 100%;
       opacity: 0.9;
       transform: scale(1.2);
       transform-origin: center center;
       animation: opacityAnimation 30s ease infinite;
+      z-index: 1;
     }
 
+    .dummy-ui {
+      z-index: 2;
+      position: relative;
+      margin: 92px auto;
+      width: 60%;
+
+
+    }
 
 
     .controls {
@@ -53,6 +65,7 @@
 
 <body>
   <canvas id="canvas"></canvas>
+  <img class="dummy-ui" src="textures/dummy-ui.png" alt="">
   <div class="controls">
     <div class="controls_item">
       xScale: <input id="xScale" type="range" min="0" max="2" step="0.1" value="1">
