--- a/tex_2.html
+++ b/tex_2.html
@@ -105,7 +105,7 @@
     </div>
   </div>
   <p><input type="checkbox" id="check" checked><label for="check"> auto run</label></p>
-  <script id="fs" type="x-shader/x-fragment">precision highp float;
+  <script id="fs" type="x-shader/x-fragment">precision lowp float;
     uniform vec2 resolution;
     uniform float time;
     uniform float xScale;
