--- a/tex_7.html
+++ b/tex_7.html
@@ -103,7 +103,7 @@
     </div>
   </div>
   <p><input type="checkbox" id="check" checked><label for="check"> auto run</label></p>
-  <script id="fs" type="x-shader/x-fragment">precision lowp float;
+  <script id="fs" type="x-shader/x-fragment">precision mediump float;
     uniform vec2 resolution;
     uniform float time;
     uniform float xScale;
